برای منتقل کردن عکس ها داخل فولدر

--- a/page01.html
+++ b/page01.html
@@ -7,7 +7,7 @@
   <body bgcolor="powderblue">
     <table border="2">
       <td>
-   <img src="header.png" alt="header"width="1900"height="300">
+   <img src="/img/header.png" alt="header"width="1900"height="300">
 </td>
 </table>
 <table  border="1"width="1910"height="160">
